Disables and changes text on friend button

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,10 +21,12 @@ $(document).ready(function() {
       type: "POST",
       success: function(resp) {
         $button.remove();
-        console.log(resp)
+        console.log(resp);
       }
     });
 
+    $button.prop("disabled", true);
+    $button.html("Friending...");
 
   });
 });
