Adding a friend toggles the 'add friend' button to 'unfriend'.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,11 @@
  *= require_self
  *= require_tree .
  */
+
+div.friend-buttons.can-unfriend button.friend {
+  display: none;
+}
+
+div.friend-buttons.can-friend button.unfriend {
+  display: none;
+}
