--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,16 +1,16 @@
-<form action="<%= secrets_url %>" method="post">
+<form action="<%= secrets_url %>" method="post" id="secret-form">
   <%= auth %>
   <input type="hidden"
          name="secret[recipient_id]"
-         value="<%= @recipient_id %>">
+         value="<%= user.id %>">
 
   <input type="hidden"
          name="secret[author_id]"
-         value="<%= current_user.id %>">
+         value="<%= author.id %>">
 
   <input type="text"
          name="secret[title]"
-         value="<%= @secret.title %>"><br>
+         ><br>
 
   <button>Post a secret, you sly guy.</button>
 </form>
