--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 
 $(document).ready(function() {
   $(".group").on("click", ".friend", function(event){
-    var $button = $(event.currentTarget)
+    var $button = $(event.currentTarget);
     var infriendId = $button.attr("data-infriendid");
     var url = "/users/"+infriendId+"/friendships";
     $.ajax({
@@ -30,22 +30,25 @@ $(document).ready(function() {
 
   });
 
-  // $(".group").on("click", ".unfriend", function(event){
-//     var $button = $(event.currentTarget)
-//     var infriendId = $button.attr("data-infriendid");
-//     var url = "/users/"+infriendId+"/friendships";
-//     $.ajax({
-//       url: url,
-//       type: "POST",
-//       success: function(resp) {
-//         $button.remove();
-//         console.log(resp);
-//       }
-//     });
-//     $button.prop("disabled", true);
-//     $button.html("Friending...");
-//
-//   });
+  $(".group").on("click", ".unfriend", function(event){
+    var $button = $(event.currentTarget);
+    var infriendId = $button.attr("data-infriendid");
+    var url = "/users/"+infriendId+"/friendships";
+    console.log(url);
+    $.ajax({
+      url: url,
+      type: "DELETE",
+      success: function(resp) {
+        $($button.closest("div")).addClass("can-friend");
+        $($button.closest("div")).removeClass("can-unfriend");
+        console.log("Successfully unfriended")
+        console.log(resp);
+        $Addbutton = $($button.siblings()[0])
+        $Addbutton.prop("disabled", false);
+        $Addbutton.html("Add Friend");
+      }
+    });
+  });
 });
 
 </script>
