--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,33 @@
 <h1><%= @user.username %></h1>
 
 <h2>Secrets</h2>
-<ul>
+<ul id="secret-list">
   <% @user.received_secrets.each do |secret| %>
     <li><%= secret.title %></li>
   <% end %>
 </ul>
+
+<%= render "secrets/form", user: @user, author: current_user%>
+
+<script>
+  $(document).ready(function() {
+    $("#secret-form").on("submit", function(event) {
+      event.preventDefault();
+
+      var formData = $(this).serialize();
+
+      $.ajax({
+        url: "/secrets",
+        type: "POST",
+        data: formData,
+        success: function(resp) {
+          $('#flash').fadeIn(500, function(){
+            $("#flash").fadeOut(250)
+          });
+          $('input[type = "text"]').val("");
+          $("#secret-list").prepend($("<li>"+resp["title"]+"</li>"));
+        }
+      })
+    })
+  });
+</script>
