Adds add tag underscore template

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -2,15 +2,25 @@
   <%= auth %>
   <input type="hidden"
          name="secret[recipient_id]"
-         value="<%= user.id %>">
+         value="<%= @user.id %>">
 
   <input type="hidden"
          name="secret[author_id]"
-         value="<%= author.id %>">
+         value="<%= current_user.id %>">
 
   <input type="text"
          name="secret[title]"
          ><br>
 
+  <select>
+      <% @tags.each do |tag| %>
+        <option value="<%= tag.id %>"><%= tag.name %></option>
+      <% end %>
+  </select><br>
+
+  <div id="secret-tag-selects">
+  </div>
+
   <button>Post a secret, you sly guy.</button>
 </form>
+
